2022.01.06-PL/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> code
Rule 1     code -> s
Rule 2     code -> code ; s
Rule 3     ciclo -> para var de e ate e faca com_list ; fimpara
Rule 4     func -> fun var ( args ) com_list ; endfun
Rule 5     comando -> e
Rule 6     comando -> ciclo
Rule 7     comando -> var assign e
Rule 8     comando -> say e_list
Rule 9     comando -> read var_list
Rule 10    s -> func
Rule 11    s -> comando
Rule 12    e_list -> e
Rule 13    e_list -> e_list , e
Rule 14    n -> nr
Rule 15    n -> - e
Rule 16    n -> e + e
Rule 17    n -> e - e
Rule 18    n -> e * e
Rule 19    n -> e / e
Rule 20    b -> f
Rule 21    b -> e or e
Rule 22    b -> e and e
Rule 23    b -> e xor e
Rule 24    f -> true
Rule 25    f -> false
Rule 26    f -> not f
Rule 27    e -> var
Rule 28    e -> ( e )
Rule 29    e -> b
Rule 30    e -> n
Rule 31    e -> string
Rule 32    e -> var ( e_list )
Rule 33    e -> var ( )
Rule 34    com_list -> comando
Rule 35    com_list -> com_list ; comando
Rule 36    var_list -> var
Rule 37    var_list -> var_list , var
Rule 38    args -> <empty>
Rule 39    args -> var_list

Terminals, with rules where they appear

(                    : 4 28 32 33
)                    : 4 28 32 33
*                    : 18
+                    : 16
,                    : 13 37
-                    : 15 17
/                    : 19
;                    : 2 3 4 35
and                  : 22
assign               : 7
ate                  : 3
de                   : 3
endfun               : 4
error                : 
faca                 : 3
false                : 25
fimpara              : 3
fun                  : 4
not                  : 26
nr                   : 14
or                   : 21
para                 : 3
read                 : 9
say                  : 8
string               : 31
true                 : 24
var                  : 3 4 7 27 32 33 36 37
xor                  : 23

Nonterminals, with rules where they appear

args                 : 4
b                    : 29
ciclo                : 6
code                 : 2 0
com_list             : 3 4 35
comando              : 11 34 35
e                    : 3 3 5 7 12 13 15 16 16 17 17 18 18 19 19 21 21 22 22 23 23 28
e_list               : 8 13 32
f                    : 20 26
func                 : 10
n                    : 30
s                    : 1 2
var_list             : 9 37 39

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . s
    (2) code -> . code ; s
    (10) s -> . func
    (11) s -> . comando
    (4) func -> . fun var ( args ) com_list ; endfun
    (5) comando -> . e
    (6) comando -> . ciclo
    (7) comando -> . var assign e
    (8) comando -> . say e_list
    (9) comando -> . read var_list
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (3) ciclo -> . para var de e ate e faca com_list ; fimpara
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    fun             shift and go to state 5
    var             shift and go to state 6
    say             shift and go to state 10
    read            shift and go to state 11
    (               shift and go to state 7
    string          shift and go to state 14
    para            shift and go to state 15
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    code                           shift and go to state 1
    s                              shift and go to state 2
    func                           shift and go to state 3
    comando                        shift and go to state 4
    e                              shift and go to state 8
    ciclo                          shift and go to state 9
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 1

    (0) S' -> code .
    (2) code -> code . ; s

    ;               shift and go to state 22


state 2

    (1) code -> s .

    ;               reduce using rule 1 (code -> s .)
    $end            reduce using rule 1 (code -> s .)


state 3

    (10) s -> func .

    ;               reduce using rule 10 (s -> func .)
    $end            reduce using rule 10 (s -> func .)


state 4

    (11) s -> comando .

    ;               reduce using rule 11 (s -> comando .)
    $end            reduce using rule 11 (s -> comando .)


state 5

    (4) func -> fun . var ( args ) com_list ; endfun

    var             shift and go to state 23


state 6

    (7) comando -> var . assign e
    (27) e -> var .
    (32) e -> var . ( e_list )
    (33) e -> var . ( )

    assign          shift and go to state 24
    or              reduce using rule 27 (e -> var .)
    and             reduce using rule 27 (e -> var .)
    xor             reduce using rule 27 (e -> var .)
    +               reduce using rule 27 (e -> var .)
    -               reduce using rule 27 (e -> var .)
    *               reduce using rule 27 (e -> var .)
    /               reduce using rule 27 (e -> var .)
    ;               reduce using rule 27 (e -> var .)
    $end            reduce using rule 27 (e -> var .)
    (               shift and go to state 25


state 7

    (28) e -> ( . e )
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 26
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 8

    (5) comando -> e .
    (21) b -> e . or e
    (22) b -> e . and e
    (23) b -> e . xor e
    (16) n -> e . + e
    (17) n -> e . - e
    (18) n -> e . * e
    (19) n -> e . / e

    ;               reduce using rule 5 (comando -> e .)
    $end            reduce using rule 5 (comando -> e .)
    or              shift and go to state 28
    and             shift and go to state 29
    xor             shift and go to state 30
    +               shift and go to state 31
    -               shift and go to state 32
    *               shift and go to state 33
    /               shift and go to state 34


state 9

    (6) comando -> ciclo .

    ;               reduce using rule 6 (comando -> ciclo .)
    $end            reduce using rule 6 (comando -> ciclo .)


state 10

    (8) comando -> say . e_list
    (12) e_list -> . e
    (13) e_list -> . e_list , e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e_list                         shift and go to state 35
    e                              shift and go to state 36
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 11

    (9) comando -> read . var_list
    (36) var_list -> . var
    (37) var_list -> . var_list , var

    var             shift and go to state 38

    var_list                       shift and go to state 37

state 12

    (29) e -> b .

    or              reduce using rule 29 (e -> b .)
    and             reduce using rule 29 (e -> b .)
    xor             reduce using rule 29 (e -> b .)
    +               reduce using rule 29 (e -> b .)
    -               reduce using rule 29 (e -> b .)
    *               reduce using rule 29 (e -> b .)
    /               reduce using rule 29 (e -> b .)
    ;               reduce using rule 29 (e -> b .)
    $end            reduce using rule 29 (e -> b .)
    )               reduce using rule 29 (e -> b .)
    ,               reduce using rule 29 (e -> b .)
    ate             reduce using rule 29 (e -> b .)
    faca            reduce using rule 29 (e -> b .)


state 13

    (30) e -> n .

    or              reduce using rule 30 (e -> n .)
    and             reduce using rule 30 (e -> n .)
    xor             reduce using rule 30 (e -> n .)
    +               reduce using rule 30 (e -> n .)
    -               reduce using rule 30 (e -> n .)
    *               reduce using rule 30 (e -> n .)
    /               reduce using rule 30 (e -> n .)
    ;               reduce using rule 30 (e -> n .)
    $end            reduce using rule 30 (e -> n .)
    )               reduce using rule 30 (e -> n .)
    ,               reduce using rule 30 (e -> n .)
    ate             reduce using rule 30 (e -> n .)
    faca            reduce using rule 30 (e -> n .)


state 14

    (31) e -> string .

    or              reduce using rule 31 (e -> string .)
    and             reduce using rule 31 (e -> string .)
    xor             reduce using rule 31 (e -> string .)
    +               reduce using rule 31 (e -> string .)
    -               reduce using rule 31 (e -> string .)
    *               reduce using rule 31 (e -> string .)
    /               reduce using rule 31 (e -> string .)
    ;               reduce using rule 31 (e -> string .)
    $end            reduce using rule 31 (e -> string .)
    )               reduce using rule 31 (e -> string .)
    ,               reduce using rule 31 (e -> string .)
    ate             reduce using rule 31 (e -> string .)
    faca            reduce using rule 31 (e -> string .)


state 15

    (3) ciclo -> para . var de e ate e faca com_list ; fimpara

    var             shift and go to state 39


state 16

    (20) b -> f .

    or              reduce using rule 20 (b -> f .)
    and             reduce using rule 20 (b -> f .)
    xor             reduce using rule 20 (b -> f .)
    +               reduce using rule 20 (b -> f .)
    -               reduce using rule 20 (b -> f .)
    *               reduce using rule 20 (b -> f .)
    /               reduce using rule 20 (b -> f .)
    ;               reduce using rule 20 (b -> f .)
    $end            reduce using rule 20 (b -> f .)
    )               reduce using rule 20 (b -> f .)
    ,               reduce using rule 20 (b -> f .)
    ate             reduce using rule 20 (b -> f .)
    faca            reduce using rule 20 (b -> f .)


state 17

    (14) n -> nr .

    or              reduce using rule 14 (n -> nr .)
    and             reduce using rule 14 (n -> nr .)
    xor             reduce using rule 14 (n -> nr .)
    +               reduce using rule 14 (n -> nr .)
    -               reduce using rule 14 (n -> nr .)
    *               reduce using rule 14 (n -> nr .)
    /               reduce using rule 14 (n -> nr .)
    ;               reduce using rule 14 (n -> nr .)
    $end            reduce using rule 14 (n -> nr .)
    )               reduce using rule 14 (n -> nr .)
    ,               reduce using rule 14 (n -> nr .)
    ate             reduce using rule 14 (n -> nr .)
    faca            reduce using rule 14 (n -> nr .)


state 18

    (15) n -> - . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 40
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 19

    (24) f -> true .

    or              reduce using rule 24 (f -> true .)
    and             reduce using rule 24 (f -> true .)
    xor             reduce using rule 24 (f -> true .)
    +               reduce using rule 24 (f -> true .)
    -               reduce using rule 24 (f -> true .)
    *               reduce using rule 24 (f -> true .)
    /               reduce using rule 24 (f -> true .)
    ;               reduce using rule 24 (f -> true .)
    $end            reduce using rule 24 (f -> true .)
    )               reduce using rule 24 (f -> true .)
    ,               reduce using rule 24 (f -> true .)
    ate             reduce using rule 24 (f -> true .)
    faca            reduce using rule 24 (f -> true .)


state 20

    (25) f -> false .

    or              reduce using rule 25 (f -> false .)
    and             reduce using rule 25 (f -> false .)
    xor             reduce using rule 25 (f -> false .)
    +               reduce using rule 25 (f -> false .)
    -               reduce using rule 25 (f -> false .)
    *               reduce using rule 25 (f -> false .)
    /               reduce using rule 25 (f -> false .)
    ;               reduce using rule 25 (f -> false .)
    $end            reduce using rule 25 (f -> false .)
    )               reduce using rule 25 (f -> false .)
    ,               reduce using rule 25 (f -> false .)
    ate             reduce using rule 25 (f -> false .)
    faca            reduce using rule 25 (f -> false .)


state 21

    (26) f -> not . f
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    f                              shift and go to state 41

state 22

    (2) code -> code ; . s
    (10) s -> . func
    (11) s -> . comando
    (4) func -> . fun var ( args ) com_list ; endfun
    (5) comando -> . e
    (6) comando -> . ciclo
    (7) comando -> . var assign e
    (8) comando -> . say e_list
    (9) comando -> . read var_list
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (3) ciclo -> . para var de e ate e faca com_list ; fimpara
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    fun             shift and go to state 5
    var             shift and go to state 6
    say             shift and go to state 10
    read            shift and go to state 11
    (               shift and go to state 7
    string          shift and go to state 14
    para            shift and go to state 15
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    s                              shift and go to state 42
    func                           shift and go to state 3
    comando                        shift and go to state 4
    e                              shift and go to state 8
    ciclo                          shift and go to state 9
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 23

    (4) func -> fun var . ( args ) com_list ; endfun

    (               shift and go to state 43


state 24

    (7) comando -> var assign . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 44
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 25

    (32) e -> var ( . e_list )
    (33) e -> var ( . )
    (12) e_list -> . e
    (13) e_list -> . e_list , e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    )               shift and go to state 46
    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e_list                         shift and go to state 45
    e                              shift and go to state 36
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 26

    (28) e -> ( e . )
    (21) b -> e . or e
    (22) b -> e . and e
    (23) b -> e . xor e
    (16) n -> e . + e
    (17) n -> e . - e
    (18) n -> e . * e
    (19) n -> e . / e

    )               shift and go to state 47
    or              shift and go to state 28
    and             shift and go to state 29
    xor             shift and go to state 30
    +               shift and go to state 31
    -               shift and go to state 32
    *               shift and go to state 33
    /               shift and go to state 34


state 27

    (27) e -> var .
    (32) e -> var . ( e_list )
    (33) e -> var . ( )

    )               reduce using rule 27 (e -> var .)
    or              reduce using rule 27 (e -> var .)
    and             reduce using rule 27 (e -> var .)
    xor             reduce using rule 27 (e -> var .)
    +               reduce using rule 27 (e -> var .)
    -               reduce using rule 27 (e -> var .)
    *               reduce using rule 27 (e -> var .)
    /               reduce using rule 27 (e -> var .)
    ,               reduce using rule 27 (e -> var .)
    ;               reduce using rule 27 (e -> var .)
    $end            reduce using rule 27 (e -> var .)
    ate             reduce using rule 27 (e -> var .)
    faca            reduce using rule 27 (e -> var .)
    (               shift and go to state 25


state 28

    (21) b -> e or . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 48
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 29

    (22) b -> e and . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 49
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 30

    (23) b -> e xor . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 50
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 31

    (16) n -> e + . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 51
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 32

    (17) n -> e - . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 52
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 33

    (18) n -> e * . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 53
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 34

    (19) n -> e / . e
    (27) e -> . var
    (28) e -> . ( e )
    (29) e -> . b
    (30) e -> . n
    (31) e -> . string
    (32) e -> . var ( e_list )
    (33) e -> . var ( )
    (20) b -> . f
    (21) b -> . e or e
    (22) b -> . e and e
    (23) b -> . e xor e
    (14) n -> . nr
    (15) n -> . - e
    (16) n -> . e + e
    (17) n -> . e - e
    (18) n -> . e * e
    (19) n -> . e / e
    (24) f -> . true
    (25) f -> . false
    (26) f -> . not f

    var             shift and go to state 27
    (               shift and go to state 7
    string          shift and go to state 14
    nr              shift and go to state 17
    -               shift and go to state 18
    true            shift and go to state 19
    false           shift and go to state 20
    not             shift and go to state 21

    e                              shift and go to state 54
    b                              shift and go to state 12
    n                              shift and go to state 13
    f                              shift and go to state 16

state 35

    (8) comando -> say e_list .
    (13) e_list -> e_list . , e

    ;               reduce using rule 8 (comando -> say e_list .)
    $end            reduce using rule 8 (comando -> say e_list .)
    ,               shift and go to state 55


state 36

    (12) e_list -> e .
    (21) b -> e . or e
    (22) b -> e . and e
    (23) b -> e . xor e
    (16) n -> e . + e
    (17) n -> e . - e
    (18) n -> e . * e
    (19) n -> e . / e
